What's new in this release:

Implemented search highlight for all matches in the view.
This change affects to qdiff, qshelve, qunshelve, qannotate.

 * qannotate:
   * Vertically center the target line when using "Goto Line" in qannotate.
     (Benoît Pierre)
 * qbrowse:
   * Does not crash anymore when called for shared repository.
     (André Bachmann, Alexander Belchenko, Bug #578935)
 * qconfig:
   * Fixed Set Default button in Merge tab. (Gordon Tyler, Bug #820635)
 * qdiff:
   * Smart scroll syncronizing for side by side view (in complete mode).
     (IWATA Hidetaka)
   * Fixed ignore whitespace changes code.
     (Alexander Belchenko, Bug #827391)
   * Use curved lines in central widget change markers.
     (IWATA Hidetaka)
   * In the case of file content has mixed encoding that cannot be safely
     decode to unicode qdiff don't fallback to use latin-1 encoding anymore,
     but try to decode such content in "replace" mode.
     (Alexander Belchenko, Bug #814117)
   * Implement search highlight. This change affects to qdiff, qshelve, 
      qunshelve, qannotate. (IWATA Hidetaka, Bug #785565)
 * qgetnew
   * Base directories for the source branch and the destination checkout folder
     can now be configured in qconfig, tab 'User Interface'. (André Bachmann)
 * qlog:
   * Do not crash on ghost revisions.
     (Jonathan Riddell, Bug #785967)
   * Show context menu properly after re-load of branch(es).
     (IWATA Hidetaka, Bug #744904)
 * qrun:
   * Command-line arguments with spaces properly quoted.
     (Alexander Belchenko, Bug #824381)
   * Add support for UIFactory.choose. 
     Make it possible to use 'shelve' in qrun. (Benoît Pierre)
 * qverify-signatures:
   * Report commits signed with expired keys in "verify-signatures".
     (Jonathan Riddell, #804254)
 * Adapt command progress display to changes needed for translations in bzrlib
   which was raising a TypeError with unicode. (Martin Packman, #872616)